@@ -4,6 +4,7 @@
 
 *** Added
 *** Changed
++ *tetragono*: The physics edge index should be non-negative now.
 *** Deprecated
 *** Removed
 *** Fixed
